<resources>
    <string name="app_name">Spooky Scary Sightings</string>

    //login
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>

    //create account
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="create_username">Username</string>
    <string name="create_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>

    //reporting
    <string name="date">YYYY-MM-DD</string>
    <string name="time">00:00</string>
    <string name="notes">Enter Some Details</string>
    <string name="city">City</string>
    <string name="state">State</string>

    //search
    <string name="search">Search sightings</string>
    <string name="profile">Search profiles</string>
    <string name="monster">Search monsters</string>

    //distance
    <string-array name="distance">
        <item>1 mile</item>
        <item>5 miles</item>
        <item>10 miles</item>
        <item>25 miles</item>
        <item>50 miles</item>
    </string-array>

    //searching sighting
    <string-array name="sight_search">
        <item>User</item>
        <item>Monster</item>
        <item>City</item>
        <item>State</item>
    </string-array>

    //searching profile
    <string-array name="profile_search">
        <item>Username</item>
        <item>First Name</item>
        <item>Last Name</item>
    </string-array>

    //searching monster
    <string-array name="monster_search">
        <item>Name</item>
    </string-array>


    //states
    <string-array name="states">
        <item>State</item>
        <item>AL</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string name="action_settings">Settings</string>

    <string name="LOGIN_PREFS">edu.tacoma.uw.css.haylee11.spookyboiz.PREFS</string>
    <string name="LOGGEDIN">loggedIn</string>
    <string name="CURRENT_USER">user</string>
    <string name="PROFILE_VIEW">other_user</string>
    <string name="action_logout">Logout</string>
    <string name="PROFILE">profile</string>

    <string name="NAME">name</string>
    <string name="SIGHTINGS">sightings</string>
    <string name="FAVORITE">favorite</string>
    <string name="BIO">bio</string>
    <string name="URL">url</string>

    <string name="MONSTER_ARR">monsters</string>

    <string name="title_activity_course">CourseActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_sighting_holder">SightingHolderActivity</string>
    <string name="dialog_share_shighting">Share sighting?</string>
    <string name="share_email">Share</string>
    <string name="share_cancel">Cancel</string>


</resources>
