<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.tacoma.uw.css.haylee11.spookyboiz.CreateAccountFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="serif-monospace"
        android:text="Create an Account"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/f_name"
        android:layout_width="292dp"
        android:layout_height="47dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/first"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/l_name"
        android:layout_width="292dp"
        android:layout_height="47dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/last"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f_name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="292dp"
        android:layout_height="47dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/email"
        android:inputType="textEmailAddress|textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="292dp"
        android:layout_height="47dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/confirm"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/confirm"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="292dp"
        android:layout_height="47dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/username"
        android:layout_width="292dp"
        android:layout_height="47dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/create_username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/l_name" />

    <Button
        android:id="@+id/create"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="226dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/black"
        android:fontFamily="serif-monospace"
        android:text="Create Account"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm" />
</android.support.constraint.ConstraintLayout>
