<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.tacoma.uw.css.haylee11.spookyboiz.ReportFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="397dp"
        android:fontFamily="serif-monospace"
        android:text="Take New Image"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="396dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/date"
        android:layout_width="182dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/date"
        android:inputType="date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/time"
        android:layout_width="182dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/time"
        android:inputType="time"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="170dp"
        android:fontFamily="serif-monospace"
        android:text="Location"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/current_location2"
        style="@style/Widget.AppCompat.CompoundButton.RadioButton"
        android:layout_width="270dp"
        android:layout_height="39dp"
        android:layout_marginTop="190dp"
        android:fontFamily="serif-monospace"
        android:text="My Current Location"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner" />

    <ImageButton
        android:id="@+id/select_image"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="320dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <ImageButton
        android:id="@+id/take_image"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_image"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="338dp"
        android:fontFamily="serif-monospace"
        android:text="Select Image from Library"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/notes"
        android:layout_width="351dp"
        android:layout_height="154dp"
        android:layout_marginTop="432dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/notes"
        android:inputType="text"
        android:lines="5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="255dp"
        android:layout_height="51dp"
        android:layout_marginTop="250dp"
        android:background="@android:color/black"
        android:fontFamily="serif-monospace"
        android:onClick="chooseLocal"
        android:text="Choose from Map"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
